--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://129.211.46.110:3306/mydb?useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=UTC
-jdbc.username=fanfan
-jdbc.password=Guren1999$
+jdbc.url=jdbc:mysql://localhost:3306/mydb?useUnicode=true&amp;characterEncoding=utf-8&amp;serverTimezone=UTC
+jdbc.username=
+jdbc.password=
